Add event exporter deployment

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -474,6 +474,19 @@ rules:
   resources:
   - clusterrolebindings
   - clusterroles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterrolebindings
+  - clusterroles
   - rolebindings
   - roles
   verbs:
