--- a/config/rbac/opni_insights_service_clusterrole.yaml
+++ b/config/rbac/opni_insights_service_clusterrole.yaml
@@ -1,23 +1,23 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: opni-svc-insights
+  name: svc-insights
 rules:
-  - apiGroups:
-      - ""
-      - "apps"
-      - "batch"
-    resources:
-      - namespaces
-      - endpoints
-      - deployments
-      - pods
-      - jobs
-      - cronjobs
-      - replicasets
-      - daemonsets
-      - statefulsets
-    verbs:
-      - get
-      - list
-      - watch
+- apiGroups:
+  - ""
+  - "apps"
+  - "batch"
+  resources:
+  - namespaces
+  - endpoints
+  - deployments
+  - pods
+  - jobs
+  - cronjobs
+  - replicasets
+  - daemonsets
+  - statefulsets
+  verbs:
+  - get
+  - list
+  - watch
