--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -53619,9 +53619,7 @@ spec:
     spec:
       containers:
       - args:
-        - --health-probe-bind-address=:8081
-        - --metrics-bind-address=127.0.0.1:8080
-        - --leader-elect
+        - --feature-gates=GPUOperator=true
         command:
         - /manager
         env:
