Enable gpu operator feature gate by default

--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -53619,7 +53619,9 @@ spec:
     spec:
       containers:
       - args:
-        - --feature-gates=GPUOperator=true
+        - --health-probe-bind-address=:8081
+        - --metrics-bind-address=127.0.0.1:8080
+        - --leader-elect
         command:
         - /manager
         env:
