--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -53659,7 +53659,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: joekralicky/opni-manager:latest
+        image: rancher/opni-manager
         livenessProbe:
           httpGet:
             path: /healthz
