--- a/package/assets/gpu-operator/state-device-plugin/0400_device_plugin.yml
+++ b/package/assets/gpu-operator/state-device-plugin/0400_device_plugin.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: nvidia-device-plugin-daemonset
   name: nvidia-device-plugin-daemonset
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   annotations:
     openshift.io/scc: hostmount-anyuid
 spec:
@@ -18,6 +18,11 @@ spec:
     spec:
       nodeSelector:
         nvidia.com/gpu.deploy.device-plugin: "true"
+      tolerations:
+        - key: nvidia.com/gpu
+          operator: Exists
+          effect: NoSchedule
+      priorityClassName: system-node-critical
       serviceAccount: nvidia-device-plugin
       initContainers:
       - name: toolkit-validation
@@ -35,6 +40,19 @@ spec:
         name: nvidia-device-plugin-ctr
         securityContext:
           privileged: true
+        env:
+          - name: PASS_DEVICE_SPECS
+            value: "true"
+          - name: FAIL_ON_INIT_ERROR
+            value: "true"
+          - name: DEVICE_LIST_STRATEGY
+            value: envvar
+          - name: DEVICE_ID_STRATEGY
+            value: uuid
+          - name: NVIDIA_VISIBLE_DEVICES
+            value: all
+          - name: NVIDIA_DRIVER_CAPABILITIES
+            value: all
         volumeMounts:
           - name: device-plugin
             mountPath: /var/lib/kubelet/device-plugins
