--- a/package/assets/gpu-operator/state-node-status-exporter/0310_clusterrolebinding.yaml
+++ b/package/assets/gpu-operator/state-node-status-exporter/0310_clusterrolebinding.yaml
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: nvidia-node-status-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
