--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -12339,6 +12339,13 @@ spec:
                     items:
                       type: string
                     type: array
+                  certConfig:
+                    description: 'Optional: Custom certificates configuration for
+                      driver container'
+                    properties:
+                      name:
+                        type: string
+                    type: object
                   enabled:
                     description: Enabled indicates if deployment of driver through
                       operator is enabled
@@ -12622,8 +12629,6 @@ spec:
                     description: 'Optional: Custom repo configuration for driver container'
                     properties:
                       configMapName:
-                        type: string
-                      destinationDir:
                         type: string
                     type: object
                   repository:
@@ -16998,6 +17003,11 @@ spec:
                         items:
                           type: string
                         type: array
+                      certConfig:
+                        properties:
+                          name:
+                            type: string
+                        type: object
                       enabled:
                         type: boolean
                       env:
@@ -17159,8 +17169,6 @@ spec:
                       repoConfig:
                         properties:
                           configMapName:
-                            type: string
-                          destinationDir:
                             type: string
                         type: object
                       repository:
