--- a/package/assets/gpu-operator/state-dcgm-exporter/0100_service_account.yaml
+++ b/package/assets/gpu-operator/state-dcgm-exporter/0100_service_account.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nvidia-dcgm-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   labels:
     app: nvidia-dcgm-exporter
