--- a/package/assets/gpu-operator/state-dcgm-exporter/0400_prom_role.yaml
+++ b/package/assets/gpu-operator/state-dcgm-exporter/0400_prom_role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: prometheus-k8s
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   labels:
     app: nvidia-dcgm-exporter
 rules:
