--- a/package/assets/gpu-operator/state-dcgm-exporter/0600_service.yaml
+++ b/package/assets/gpu-operator/state-dcgm-exporter/0600_service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   name: nvidia-dcgm-exporter
   labels:
     app: nvidia-dcgm-exporter
