--- a/package/assets/gpu-operator/state-dcgm-exporter/0700_service_monitor.yaml
+++ b/package/assets/gpu-operator/state-dcgm-exporter/0700_service_monitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: nvidia-dcgm-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   labels:
     app: nvidia-dcgm-exporter
 spec:
@@ -12,7 +12,7 @@ spec:
   jobLabel: app
   namespaceSelector:
     matchNames:
-    - gpu-operator-resources
+    - "FILLED BY THE OPERATOR"
   selector:
     matchLabels:
      app: nvidia-dcgm-exporter
