--- a/package/assets/gpu-operator/state-dcgm-exporter/0900_daemonset.yaml
+++ b/package/assets/gpu-operator/state-dcgm-exporter/0900_daemonset.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: nvidia-dcgm-exporter
   name: nvidia-dcgm-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   annotations:
     openshift.io/scc: nvidia-dcgm-exporter
 spec:
@@ -18,6 +18,11 @@ spec:
     spec:
       nodeSelector:
         nvidia.com/gpu.deploy.dcgm-exporter: "true"
+      tolerations:
+        - key: nvidia.com/gpu
+          operator: Exists
+          effect: NoSchedule
+      priorityClassName: system-node-critical
       serviceAccount: nvidia-dcgm-exporter
       serviceAccountName: nvidia-dcgm-exporter
       initContainers:
@@ -39,6 +44,12 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
+        - name: DCGM_EXPORTER_LISTEN
+          value: ":9400"
+        - name: DCGM_EXPORTER_KUBERNETES
+          value: "true"
+        - name: DCGM_EXPORTER_COLLECTORS
+          value: "/etc/dcgm-exporter/dcp-metrics-included.csv"
         ports:
         - name: "metrics"
           containerPort: 9400
