--- a/package/assets/gpu-operator/state-dcgm/0300_rolebinding.yaml
+++ b/package/assets/gpu-operator/state-dcgm/0300_rolebinding.yaml
@@ -2,15 +2,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: nvidia-dcgm
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: nvidia-dcgm
-  namespace: gpu-operator-resources
 subjects:
 - kind: ServiceAccount
   name: nvidia-dcgm
-  namespace: gpu-operator-resources
-userNames:
-- system:serviceaccount:gpu-operator-resources:nvidia-dcgm
+  namespace: "FILLED BY THE OPERATOR"
