--- a/package/assets/gpu-operator/state-dcgm/0310_scc.openshift.yaml
+++ b/package/assets/gpu-operator/state-dcgm/0310_scc.openshift.yaml
@@ -42,6 +42,6 @@ seccompProfiles:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:gpu-operator-resources:nvidia-dcgm
+- "FILLED BY THE OPERATOR"
 volumes:
 - '*'
