--- a/package/assets/gpu-operator/state-dcgm/0400_dcgm.yml
+++ b/package/assets/gpu-operator/state-dcgm/0400_dcgm.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: nvidia-dcgm
   name: nvidia-dcgm
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   annotations:
     openshift.io/scc: hostmount-anyuid
 spec:
@@ -18,6 +18,11 @@ spec:
     spec:
       nodeSelector:
         nvidia.com/gpu.deploy.dcgm: "true"
+      tolerations:
+        - key: nvidia.com/gpu
+          operator: Exists
+          effect: NoSchedule
+      priorityClassName: system-node-critical
       serviceAccount: nvidia-dcgm
       initContainers:
       - name: toolkit-validation
