--- a/package/assets/gpu-operator/state-mig-manager/0600_daemonset.yaml
+++ b/package/assets/gpu-operator/state-mig-manager/0600_daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: nvidia-mig-manager
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   labels:
     app: nvidia-mig-manager
 spec:
@@ -16,6 +16,11 @@ spec:
     spec:
       nodeSelector:
         nvidia.com/gpu.deploy.mig-manager: "true"
+      tolerations:
+        - key: nvidia.com/gpu
+          operator: Exists
+          effect: NoSchedule
+      priorityClassName: system-node-critical
       serviceAccount: nvidia-mig-manager
       initContainers:
         - name: toolkit-validation
@@ -30,7 +35,7 @@ spec:
               mountPropagation: HostToContainer
       containers:
       - name: nvidia-mig-manager
-        image: "FILLED_BY_OPERATOR"
+        image: "FILLED BY THE OPERATOR"
         imagePullPolicy: IfNotPresent
         env:
         - name: NODE_NAME
@@ -40,7 +45,7 @@ spec:
         - name: CONFIG_FILE
           value: "/mig-parted-config/config.yaml"
         - name: WITH_REBOOT
-          value: "FILLED_BY_OPERATOR"
+          value: "false"
         - name: HOST_ROOT_MOUNT
           value: "/host"
         securityContext:
@@ -52,6 +57,7 @@ spec:
           name: mig-parted-config
         - mountPath: /host
           name: host-root
+          mountPropagation: HostToContainer
       volumes:
       - name: host-sys
         hostPath:
