--- a/package/assets/gpu-operator/state-node-status-exporter/0200_role.yaml
+++ b/package/assets/gpu-operator/state-node-status-exporter/0200_role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: nvidia-node-status-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   labels:
     app: nvidia-node-status-exporter
 rules:
