--- a/package/assets/gpu-operator/state-node-status-exporter/0210_rolebinding.yaml
+++ b/package/assets/gpu-operator/state-node-status-exporter/0210_rolebinding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: nvidia-node-status-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   labels:
     app: nvidia-node-status-exporter
 roleRef:
@@ -12,6 +12,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: nvidia-node-status-exporter
-  namespace: gpu-operator-resources
-userNames:
-- system:serviceaccount:gpu-operator-resources:nvidia-node-status-exporter
+  namespace: "FILLED BY THE OPERATOR"
