--- a/package/assets/gpu-operator/state-node-status-exporter/0400_scc.openshift.yaml
+++ b/package/assets/gpu-operator/state-node-status-exporter/0400_scc.openshift.yaml
@@ -42,6 +42,6 @@ seccompProfiles:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:gpu-operator-resources:nvidia-node-status-exporter
+- "FILLED BY THE OPERATOR"
 volumes:
 - '*'
