--- a/package/assets/gpu-operator/state-node-status-exporter/0500_service.yaml
+++ b/package/assets/gpu-operator/state-node-status-exporter/0500_service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   name: nvidia-node-status-exporter
   labels:
     app: nvidia-node-status-exporter
