--- a/package/assets/gpu-operator/state-node-status-exporter/0700_daemonset.yaml
+++ b/package/assets/gpu-operator/state-node-status-exporter/0700_daemonset.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: nvidia-node-status-exporter
   name: nvidia-node-status-exporter
-  namespace: gpu-operator-resources
+  namespace: "FILLED BY THE OPERATOR"
   annotations:
     openshift.io/scc: nvidia-node-status-exporter
 spec:
@@ -18,6 +18,11 @@ spec:
     spec:
       nodeSelector:
         nvidia.com/gpu.deploy.node-status-exporter: "true"
+      tolerations:
+        - key: nvidia.com/gpu
+          operator: Exists
+          effect: NoSchedule
+      priorityClassName: system-node-critical
       serviceAccount: nvidia-node-status-exporter
       containers:
       - image: "FILLED BY THE OPERATOR"
