Add enhanceK8s filter to logAdapter
Include a custom image for fluentd
Switches to fork for logging-operator

--- a/config/crd/bases/opni.io_logadapters.yaml
+++ b/config/crd/bases/opni.io_logadapters.yaml
@@ -892,6 +892,8 @@ spec:
                             type: integer
                           prometheusAnnotations:
                             type: boolean
+                          prometheusRules:
+                            type: boolean
                           serviceMonitor:
                             type: boolean
                           serviceMonitorConfig:
@@ -2030,6 +2032,8 @@ spec:
                             type: integer
                           prometheusAnnotations:
                             type: boolean
+                          prometheusRules:
+                            type: boolean
                           serviceMonitor:
                             type: boolean
                           serviceMonitorConfig:
@@ -2545,6 +2549,8 @@ spec:
                             type: integer
                           prometheusAnnotations:
                             type: boolean
+                          prometheusRules:
+                            type: boolean
                           serviceMonitor:
                             type: boolean
                           serviceMonitorConfig:
@@ -2958,6 +2964,45 @@ spec:
                               type: integer
                             value:
                               type: string
+                          type: object
+                        type: array
+                      topologySpreadConstraints:
+                        items:
+                          properties:
+                            labelSelector:
+                              properties:
+                                matchExpressions:
+                                  items:
+                                    properties:
+                                      key:
+                                        type: string
+                                      operator:
+                                        type: string
+                                      values:
+                                        items:
+                                          type: string
+                                        type: array
+                                    required:
+                                    - key
+                                    - operator
+                                    type: object
+                                  type: array
+                                matchLabels:
+                                  additionalProperties:
+                                    type: string
+                                  type: object
+                              type: object
+                            maxSkew:
+                              format: int32
+                              type: integer
+                            topologyKey:
+                              type: string
+                            whenUnsatisfiable:
+                              type: string
+                          required:
+                          - maxSkew
+                          - topologyKey
+                          - whenUnsatisfiable
                           type: object
                         type: array
                       volumeModImage:
@@ -3876,6 +3921,8 @@ spec:
                             type: integer
                           prometheusAnnotations:
                             type: boolean
+                          prometheusRules:
+                            type: boolean
                           serviceMonitor:
                             type: boolean
                           serviceMonitorConfig:
@@ -5014,6 +5061,8 @@ spec:
                             type: integer
                           prometheusAnnotations:
                             type: boolean
+                          prometheusRules:
+                            type: boolean
                           serviceMonitor:
                             type: boolean
                           serviceMonitorConfig:
@@ -5529,6 +5578,8 @@ spec:
                             type: integer
                           prometheusAnnotations:
                             type: boolean
+                          prometheusRules:
+                            type: boolean
                           serviceMonitor:
                             type: boolean
                           serviceMonitorConfig:
@@ -5942,6 +5993,45 @@ spec:
                               type: integer
                             value:
                               type: string
+                          type: object
+                        type: array
+                      topologySpreadConstraints:
+                        items:
+                          properties:
+                            labelSelector:
+                              properties:
+                                matchExpressions:
+                                  items:
+                                    properties:
+                                      key:
+                                        type: string
+                                      operator:
+                                        type: string
+                                      values:
+                                        items:
+                                          type: string
+                                        type: array
+                                    required:
+                                    - key
+                                    - operator
+                                    type: object
+                                  type: array
+                                matchLabels:
+                                  additionalProperties:
+                                    type: string
+                                  type: object
+                              type: object
+                            maxSkew:
+                              format: int32
+                              type: integer
+                            topologyKey:
+                              type: string
+                            whenUnsatisfiable:
+                              type: string
+                          required:
+                          - maxSkew
+                          - topologyKey
+                          - whenUnsatisfiable
                           type: object
                         type: array
                       volumeModImage:
