--- a/config/crd/logging/logging.opni.io_outputs.yaml
+++ b/config/crd/logging/logging.opni.io_outputs.yaml
@@ -367,6 +367,10 @@ spec:
                     type: object
                   include_tag_key:
                     type: boolean
+                  include_timestamp:
+                    type: string
+                  index_name:
+                    type: string
                   logstash_format:
                     type: boolean
                   logstash_prefix:
@@ -777,6 +781,8 @@ spec:
                   use_tag_as_stream:
                     type: boolean
                 required:
+                - log_group_name
+                - log_stream_name
                 - region
                 type: object
               datadog:
@@ -1168,7 +1174,11 @@ spec:
                     type: string
                   data_stream_enable:
                     type: boolean
+                  data_stream_ilm_name:
+                    type: string
                   data_stream_name:
+                    type: string
+                  data_stream_template_name:
                     type: string
                   default_elasticsearch_version:
                     type: string
@@ -1448,6 +1458,8 @@ spec:
                       type:
                         type: string
                     type: object
+                  compress:
+                    type: string
                   format:
                     properties:
                       add_newline:
@@ -1469,6 +1481,8 @@ spec:
                     type: string
                   path_suffix:
                     type: string
+                  recompress:
+                    type: boolean
                   symlink_path:
                     type: boolean
                 required:
@@ -2023,73 +2037,6 @@ spec:
                 type: object
               gelf:
                 properties:
-                  buffer:
-                    properties:
-                      chunk_full_threshold:
-                        type: string
-                      chunk_limit_records:
-                        type: integer
-                      chunk_limit_size:
-                        type: string
-                      compress:
-                        type: string
-                      delayed_commit_timeout:
-                        type: string
-                      disable_chunk_backup:
-                        type: boolean
-                      flush_at_shutdown:
-                        type: boolean
-                      flush_interval:
-                        type: string
-                      flush_mode:
-                        type: string
-                      flush_thread_burst_interval:
-                        type: string
-                      flush_thread_count:
-                        type: integer
-                      flush_thread_interval:
-                        type: string
-                      overflow_action:
-                        type: string
-                      path:
-                        type: string
-                      queue_limit_length:
-                        type: integer
-                      queued_chunks_limit_size:
-                        type: integer
-                      retry_exponential_backoff_base:
-                        type: string
-                      retry_forever:
-                        type: boolean
-                      retry_max_interval:
-                        type: string
-                      retry_max_times:
-                        type: integer
-                      retry_randomize:
-                        type: boolean
-                      retry_secondary_threshold:
-                        type: string
-                      retry_timeout:
-                        type: string
-                      retry_type:
-                        type: string
-                      retry_wait:
-                        type: string
-                      tags:
-                        type: string
-                      timekey:
-                        type: string
-                      timekey_use_utc:
-                        type: boolean
-                      timekey_wait:
-                        type: string
-                      timekey_zone:
-                        type: string
-                      total_limit_size:
-                        type: string
-                      type:
-                        type: string
-                    type: object
                   host:
                     type: string
                   port:
@@ -4042,6 +3989,21 @@ spec:
                     type: string
                   clustername:
                     type: string
+                  compress:
+                    properties:
+                      parquet_compression_codec:
+                        type: string
+                      parquet_page_size:
+                        type: string
+                      parquet_row_group_size:
+                        type: string
+                      record_type:
+                        type: string
+                      schema_file:
+                        type: string
+                      schema_type:
+                        type: string
+                    type: object
                   compute_checksums:
                     type: string
                   enable_transfer_acceleration:
@@ -5251,6 +5213,10 @@ spec:
                     type: object
                   include_tag_key:
                     type: boolean
+                  include_timestamp:
+                    type: string
+                  index_name:
+                    type: string
                   logstash_format:
                     type: boolean
                   logstash_prefix:
@@ -5661,6 +5627,8 @@ spec:
                   use_tag_as_stream:
                     type: boolean
                 required:
+                - log_group_name
+                - log_stream_name
                 - region
                 type: object
               datadog:
@@ -6052,7 +6020,11 @@ spec:
                     type: string
                   data_stream_enable:
                     type: boolean
+                  data_stream_ilm_name:
+                    type: string
                   data_stream_name:
+                    type: string
+                  data_stream_template_name:
                     type: string
                   default_elasticsearch_version:
                     type: string
@@ -6332,6 +6304,8 @@ spec:
                       type:
                         type: string
                     type: object
+                  compress:
+                    type: string
                   format:
                     properties:
                       add_newline:
@@ -6353,6 +6327,8 @@ spec:
                     type: string
                   path_suffix:
                     type: string
+                  recompress:
+                    type: boolean
                   symlink_path:
                     type: boolean
                 required:
@@ -6907,73 +6883,6 @@ spec:
                 type: object
               gelf:
                 properties:
-                  buffer:
-                    properties:
-                      chunk_full_threshold:
-                        type: string
-                      chunk_limit_records:
-                        type: integer
-                      chunk_limit_size:
-                        type: string
-                      compress:
-                        type: string
-                      delayed_commit_timeout:
-                        type: string
-                      disable_chunk_backup:
-                        type: boolean
-                      flush_at_shutdown:
-                        type: boolean
-                      flush_interval:
-                        type: string
-                      flush_mode:
-                        type: string
-                      flush_thread_burst_interval:
-                        type: string
-                      flush_thread_count:
-                        type: integer
-                      flush_thread_interval:
-                        type: string
-                      overflow_action:
-                        type: string
-                      path:
-                        type: string
-                      queue_limit_length:
-                        type: integer
-                      queued_chunks_limit_size:
-                        type: integer
-                      retry_exponential_backoff_base:
-                        type: string
-                      retry_forever:
-                        type: boolean
-                      retry_max_interval:
-                        type: string
-                      retry_max_times:
-                        type: integer
-                      retry_randomize:
-                        type: boolean
-                      retry_secondary_threshold:
-                        type: string
-                      retry_timeout:
-                        type: string
-                      retry_type:
-                        type: string
-                      retry_wait:
-                        type: string
-                      tags:
-                        type: string
-                      timekey:
-                        type: string
-                      timekey_use_utc:
-                        type: boolean
-                      timekey_wait:
-                        type: string
-                      timekey_zone:
-                        type: string
-                      total_limit_size:
-                        type: string
-                      type:
-                        type: string
-                    type: object
                   host:
                     type: string
                   port:
@@ -8926,6 +8835,21 @@ spec:
                     type: string
                   clustername:
                     type: string
+                  compress:
+                    properties:
+                      parquet_compression_codec:
+                        type: string
+                      parquet_page_size:
+                        type: string
+                      parquet_row_group_size:
+                        type: string
+                      record_type:
+                        type: string
+                      schema_file:
+                        type: string
+                      schema_type:
+                        type: string
+                    type: object
                   compute_checksums:
                     type: string
                   enable_transfer_acceleration:
