Add upgrade logic to Opensearch

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -2187,13 +2187,20 @@ spec:
                 items:
                   type: string
                 type: array
-              indexState:
-                type: string
               logState:
                 type: string
               natsReplicas:
                 format: int32
                 type: integer
+              opensearchState:
+                properties:
+                  dataUpgraded:
+                    type: boolean
+                  indexState:
+                    type: string
+                  version:
+                    type: string
+                type: object
               state:
                 type: string
             type: object
