Add cluster init and ISM version handling

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -2194,10 +2194,10 @@ spec:
                 type: integer
               opensearchState:
                 properties:
-                  dataUpgraded:
-                    type: boolean
                   indexState:
                     type: string
+                  initialized:
+                    type: boolean
                   version:
                     type: string
                 type: object
