--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
 - _v1beta1_pretrainedmodel.yaml
 - _v1beta1_gpupolicyadapter-vgpu.yaml
 # - _v1beta1_gpupolicyadapter.yaml
-- _v1_nodefeaturediscovery.yaml
+# - _v1_nodefeaturediscovery.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
