--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -10,6 +10,18 @@ rules:
   - ""
   resources:
   - configmaps
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
   - events
   - nodes
   - persistentvolumeclaims
@@ -40,11 +52,41 @@ rules:
   - update
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - events
+  - persistentvolumeclaims
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - '*'
   resources:
   - '*'
   verbs:
   - '*'
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - apps
   resources:
@@ -97,6 +139,19 @@ rules:
   - update
   - watch
 - apiGroups:
+  - apps
+  - extensions
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - batch
   resources:
   - jobs
@@ -121,6 +176,7 @@ rules:
   resources:
   - leases
   verbs:
+  - '*'
   - create
   - delete
   - get
@@ -256,6 +312,31 @@ rules:
   - ""
   resources:
   - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - extensions
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - integreatly.org
+  resources:
+  - grafanadatasources
   verbs:
   - create
   - delete
@@ -578,3 +659,123 @@ rules:
   - storageclasses
   verbs:
   - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - objectstores
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - objectstores/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - receivers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - receivers/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - storeendpoints
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - storeendpoints/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - thanos
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - thanos/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - thanosendpoints
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - thanosendpoints/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - thanospeers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - thanos.opni.io
+  resources:
+  - thanospeers/status
+  verbs:
+  - get
+  - patch
+  - update
